# usd_from_gltf

./: CMakeLists.txt  README.md
cmake/modules/: FindGIFLIB.cmake  FindTurboJPEG.cmake
convert/: materializer.cc
gltf/: CMakeLists.txt
process/: CMakeLists.txt
usd_from_gltf/: CMakeLists.txt  usd_from_gltf.cc
